Log text/vcard MIME type downloads.

This adds a new value to Download.IOSDownloadMimeType histogram.
text/vcard could be a common email attachment and this histogram will
allow to understand if Chrome should support "Add To Contacts" UI for
these downloads.

Bug: 604533
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I03f1a409f201e20dfa44b8c16677b24a439ec7a5
Reviewed-on: https://chromium-review.googlesource.com/1244076
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594325}
Former-commit-id: e6be128334edbfb4b51a4d0eb73fe388578f0be4