ios/chrome/browser/download/browser_download_service.h
@@ -34,7 +34,9 @@ enum class DownloadMimeTypeResult {
   MicrosoftApplication = 4,
   // application/vnd.android.package-archive MIME type (.apk file).
   AndroidPackageArchive = 5,
-  kMaxValue = AndroidPackageArchive,
+  // text/vcard MIME type.
+  VirtualContactFile = 6,
+  kMaxValue = VirtualContactFile,
 };
 
 // Keyed Service which acts as web::DownloadController delegate and routes
